Fixed spacing issue and opted for inline styling

--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -104,8 +104,3 @@
 .hidden {
     display: none;
 }
-
-.special {
-    text-indent: 40px;
-    font-size: 17px;
-}
